--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -7,11 +7,7 @@
   
   {{ content_for_header }}
   
-  <!-- Google Fonts -->
-  {% comment %} theme-check-disable RemoteAsset {% endcomment %}
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <!-- Local fonts are bundled via assets/theme.css -->
   <!-- Bootstrap 5 CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Bootstrap Icons -->
@@ -65,6 +61,8 @@
     {%- liquid
       # Convert font family settings to CSS values
       case heading_font_family
+        when 'merriweather_heading'
+          assign heading_font_family_css = "'MerriweatherHeading', 'Merriweather', Georgia, serif"
         when 'playfair'
           assign heading_font_family_css = "'Playfair Display', 'Times New Roman', serif"
         when 'merriweather'
@@ -86,6 +84,8 @@
       endcase
       
       case subheading_font_family
+        when 'merriweather_subheading'
+          assign subheading_font_family_css = "'MerriweatherSubheading', 'Merriweather', Georgia, serif"
         when 'playfair'
           assign subheading_font_family_css = "'Playfair Display', 'Times New Roman', serif"
         when 'merriweather'
@@ -107,6 +107,8 @@
       endcase
       
       case body_font_family
+        when 'merriweather_body'
+          assign body_font_family_css = "'MerriweatherBody', 'Merriweather', Georgia, serif"
         when 'playfair'
           assign body_font_family_css = "'Playfair Display', 'Times New Roman', serif"
         when 'merriweather'
