--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -239,6 +239,7 @@
 
   {% section 'footer' %}
 
+  <script src="{{ 'shopify_common.js' | asset_url }}" defer></script>
   <!-- Bootstrap 5 JS -->
   {% comment %} theme-check-disable RemoteAsset {% endcomment %}
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
