--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -169,7 +169,7 @@
     html body .container h4,
     html body .container h5,
     html body .container h6 {
-      color: {{ heading_color }} !important;
+      color: {{ heading_color }};
       font-size: {{ heading_font_size }}px !important;
       font-weight: {{ heading_font_weight }} !important;
       font-family: {{ heading_font_family_css }} !important;
@@ -197,7 +197,7 @@
     html body .container .custom-text-subheading,
     html body .container .two-column-subheading,
     html body .container .hero-subtitle {
-      color: {{ subheading_color }} !important;
+      color: {{ subheading_color }};
       font-size: {{ subheading_font_size }}px !important;
       font-weight: {{ subheading_font_weight }} !important;
       font-family: {{ subheading_font_family_css }} !important;
@@ -213,7 +213,7 @@
     html body .container p,
     html body main .custom-text-body,
     html body main .two-column-body {
-      color: {{ body_text_color }} !important;
+      color: {{ body_text_color }};
       font-size: {{ body_font_size }}px !important;
       font-weight: {{ body_font_weight }} !important;
       font-family: {{ body_font_family_css }} !important;
